resources/tests/invalid_syntax/type_void.ct
//`'void' typename cannot be marked as mutable!
//1
fn hello()->mut void {
  pass;
}